fix for footer clipping

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,8 @@ html {
 
 body {
     background-color: rgb(245, 237, 237);
+    display: flex;
+    flex-direction: column;
 }
 
 .mainTitle {
